# badge-size

./: .czrc  .eslintrc  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  index.js  package-lock.json  package.json  readme.md  runbook.md  test.js  vercel.json
.github/workflows/: ci.yaml
api/: index.js
lib/: acl.js  color.js  compression.js  constraints.js  fetch.js  init.js  pretty.js  send.js
perf/: Cargo.toml
perf/results/: js+vercel.txt  rust+do+cf.txt
perf/src/: main.rs
src/: app.rs  badge_info.rs  context.rs  lib.rs  main.rs  tracing.rs
src/counters/: brotli_counter.rs  count_write.rs  counter.rs  gzip_counter.rs  mod.rs  raw_counter.rs
src/handler/: acl.rs  handle.rs  mod.rs  senders.rs
src/handler/processors/: apply_constraints.rs  count_size.rs  fetch_source.rs  mod.rs
src/options/: color.rs  compression.rs  extension.rs  mod.rs  options.rs  style.rs
src/renderer/: kerning.rs  mod.rs  render_badge.rs  templates.rs  visual_info.rs
tests/: mod.rs
tests/snapshots/: r#mod__display_brotli_size.snap  r#mod__display_custom_color.snap  r#mod__display_custom_label.snap  r#mod__display_custom_style.snap  r#mod__display_error_for_invalid_compression.snap  r#mod__display_error_for_invalid_path.snap  r#mod__display_gzip_size.snap  r#mod__follow_redirects.snap  r#mod__keep_custom_color_when_size_is_lte_softmax.snap  r#mod__serve_github_file.snap  r#mod__set_color_to_red_when_size_exceeds_max.snap  r#mod__set_color_to_yellow_when_size_exceeds_softmax.snap
