[package]
name = "badge-size"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-std = { version = "1.9.0", features = ["attributes"] }
brotli = "3.3.2"
bytesize = "1.1.0"
flate2 = "1.0.21"
serde = { version = "1.0.130", features = ["derive"] }
surf = "2.3.1"
tide = "0.16.0"

[dev-dependencies]
insta = "1.8.0"
